--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -135,7 +135,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +408,7 @@
         "\n",
         "air_visit.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +533,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -628,7 +628,7 @@
         "\n",
         "date_info.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +755,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +862,7 @@
         "\n",
         "air_store_info.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1042,7 +1042,7 @@
         "\n",
         "submission.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1164,7 +1164,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1297,7 +1297,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1533,7 +1533,7 @@
         "weather.rename(columns={'calendar_date': 'visit_date'}, inplace=True)\n",
         "\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1549,7 +1549,7 @@
       "source": [
         "weather.head(20)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2055,7 +2055,7 @@
         "\n",
         "weather[['visit_date', 'avg_temperature', 'precipitation']].head()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2169,7 +2169,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2413,16 +2413,16 @@
         "\n",
         "Giả sử rằng lượt truy cập tuân theo phân phối chuẩn cho mỗi nhà hàng.\n",
         "\n",
-        "Ta chọn hệ số Z là 2.4 để có khoản tin cậy khoảng 97% và lượt bỏ khoảng 3% số lượng giá trị outlier. Bạn có thể tham khảo thêm tại [đây](https://www.mathsisfun.com/data/confidence-interval-calculator.html) để biết thêm về hệ số Z.\n",
+        "Ta chọn hệ số Z là 2.4 để có khoản tin cậy khoảng 97% và lượt bỏ khoảng 3% số lượng giá trị outlier. Bạn có thể tham khảo thêm tại [đây](https://www.mathsisfun.com/data/confidence-interval-calculator.html) và ở [đây](https://www.statisticshowto.com/probability-and-statistics/z-score/) để biết thêm về hệ số Z.\n",
         "\n",
         "\n",
-        " <font size=\"5\"> $$ \\overline{x} \\pm Z \\frac{s}{\\sqrt(n)}  $$  </font>\n",
+        " <font size=\"5\"> $$ x - \\overline{x} = Z * s  $$  </font>\n",
         "\n",
         "Trong đó: \n",
         "- $ \\overline{x}: mean $\n",
-        "- $ Z: \\text{hệ số} $\n",
+        "- $ Z: \\text{hệ số score} $\n",
         "- $ s:  \\text{độ lệch chuẩn}$\n",
-        "- $ n: \\text{số lượng mẫu quan sát} $\n",
+        "\n",
         "\n",
         "|   | $$ Z $$ |\n",
         "|---|---|\n",
@@ -2468,7 +2468,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2735,7 +2735,7 @@
         "data['is_weekend'] = data['day_of_week'].isin(['Saturday', 'Sunday']).astype(int)\n",
         "data['day_of_month'] = data['visit_date'].dt.day"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2804,7 +2804,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3196,7 +3196,7 @@
         "\n",
         "data.sort_values(['air_store_id', 'visit_date']).head()\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3768,7 +3768,7 @@
         "data = pd.get_dummies(data, columns=['day_of_week', 'air_genre_name'])\n",
         "data.head()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
