--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -3,17 +3,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "n5AN8sNYxJdl"
+        "id": "Y8-dYw85kx6J"
       },
       "source": [
-        "# KHOA HỌC DỮ LIỆU & ỨNG DỤNG\n",
+        "# BÁO CÁO ĐỒ ÁN MÔN \"KHOA HỌC DỮ LIỆU & ỨNG DỤNG\"\n",
         "### GVHD: TRẦN TRUNG KIÊN\n",
         "### THỰC HIỆN: Nhóm 12\n",
         "### DANH SÁCH THÀNH VIÊN\n",
         "  1. 1712667 - Lê Hữu Phúc\n",
         "  2. 18120167 - Nguyễn Viết Dũng\n",
         "  3. 18120579 - Đặng Minh Thọ\n",
-        "  4. 18120584 - Phạm Đình Thục"
+        "  4. 18120584 - Phạm Đình Thục\n",
+        "  \n",
+        "#### Link thùng chứa Github của nhóm: https://github.com/pdthuc/Project-Applied_Data_Science"
       ]
     },
     {
