--- a/Group12_Notebook.ipynb
+++ b/Group12_Notebook.ipynb
@@ -5386,6 +5386,9 @@
         "Sau bao ngày vất vả làm đồ án thì bây giờ đã kết thúc. Bây giờ là lúc để ngồi uống coffee và tĩnh tâm nhìn lại quá trình làm. Mỗi thành viên sẽ gặp những thuận lợi, khó khăn và từ đó rút ra được những bài học cho riểng mình.\n",
         "\n",
         "### 1. Lê Hữu Phúc\n",
+        "- Với việc lựa chọn đề tài phù hợp với nền tảng kiến thức nên em có một số thuận lợi trong việc làm đồ án này như: solution có code sẵn, tác giả trình bày rỏ ràng ý tưởng của giải pháp.\n",
+        "- Những khó khăn gặp phải như: Một số ý tác giả chưa giải thích rỏ như phần 5.1, 5.3, lightGBM, các phương pháp tiền sử lý cho dữ liệu time-series nên cần tìm hiểu nhiều kiến thức mới. Lần đầu tiên tiếp cận kaggle và bài toán thực tế.\n",
+        "- Qua quá trình làm đồ án, em củng tích luỹ những kiến thức bổ ích cho bản thân về triển khai mô hình thực tế cho dữ liệu time-series và quá trình xữ lý dữ liệu.\n",
         "\n",
         "### 2. Nguyễn Viết Dũng\n",
         "\n",
