--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -5388,7 +5388,7 @@
         "### 1. Lê Hữu Phúc\n",
         "- Với việc lựa chọn đề tài phù hợp với nền tảng kiến thức nên em có một số thuận lợi trong việc làm đồ án này như: solution có code sẵn, tác giả trình bày rỏ ràng ý tưởng của giải pháp.\n",
         "- Những khó khăn gặp phải như: Một số ý tác giả chưa giải thích rỏ như phần 5.1, 5.3, lightGBM, các phương pháp tiền sử lý cho dữ liệu time-series nên cần tìm hiểu nhiều kiến thức mới. Lần đầu tiên tiếp cận kaggle và bài toán thực tế.\n",
-        "- Qua quá trình làm đồ án, em củng tích luỹ những kiến thức bổ ích cho bản thân về triển khai mô hình thực tế cho dữ liệu time-series và quá trình xữ lý dữ liệu.\n",
+        "- Qua quá trình làm đồ án, em củng tích luỹ những kiến thức bổ ích cho bản thân về triển khai mô hình thực tế cho dữ liệu time-series và quá trình xử lý dữ liệu.\n",
         "\n",
         "### 2. Nguyễn Viết Dũng\n",
         "\n",
@@ -5396,9 +5396,9 @@
         "\n",
         "\n",
         "### 4. Phạm Đình Thục\n",
-        "- Trong đồ án này, với việc lựa chọn được đề tài, solution phù hợp với mình, em đã có một số thuận lợi trong việc làm đồ án này như: solution có code sẵn, được tác giả trình bày rõ ràng giúp cho việc đọc hiểu dễ dàng hơn.\n",
-        "- Bên cạnh thuận lợi, em cũng gặp một số khó khăn như: solution tác giả giới thiệu còn khá mới đối với em nên khó có thể hiểu rõ và sâu được nó. \n",
-        "- Qua quá trình làm đồ án này, em rút ra được một số kiến thức hữu ích cho bản thân như: về việc triển khai bài toán time-series trong thực tế, về mô hình LightGBM. \n",
+        "- Trong đồ án này, với việc lựa chọn được đề tài, solution phù hợp với mình, em đã có một số thuận lợi trong việc làm đồ án này như: solution có code sẵn, được tác giả trình bày rõ ràng giúp cho việc đọc hiểu đề tài dễ dàng hơn.\n",
+        "- Bên cạnh thuận lợi, em cũng gặp một số khó khăn như: solution tác giả giới thiệu còn khá mới đối với em như lightGBM, nên khó có thể hiểu rõ và sâu được nó, một số phần tác giả chưa giải thích rõ ràng như: 4.6, 5.3. \n",
+        "- Qua quá trình làm đồ án này, em rút ra được một số kiến thức hữu ích cho bản thân như: về việc triển khai bài toán time-series trong thực tế, quá trình khám phá, xử lý dữ liệu cho mô hình LightGBM. \n",
         "\n",
         "## Cải tiến bài toán\n",
         "Ngoài ra, nếu có thời gian thêm, Nhóm hy vọng có thể cải tiến bài toán này bằng cách:"
