--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pdthuc/Project-Applied_Data_Science/blob/main/Group12_kaggle_recruit_restaurant.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Y8-dYw85kx6J"
       },
       "source": [
@@ -5384,7 +5394,9 @@
         "### 2. Nguyễn Viết Dũng\n",
         "\n",
         "### 3. Đặng Minh Thọ\n",
-        "\n",
+        "- Trong đồ án này, với việc lựa chọn được đề tài, solution phù hợp với nhóm mình, em đã có một số thuận lợi trong việc làm đồ án này như: solution có code sẵn, được tác giả trình bày rõ ràng giúp cho việc đọc hiểu đề tài dễ dàng hơn.\n",
+        "- Những khó khăn mà em gặp phải như: chưa triển khai hết những ý tưởng đã đề ra, một số ý tác giả chưa giải thích rõ như phần 5.3, 5.4 làm khó khăn cho việc hiểu rõ hơn về các giải quyết đó của tác giả\n",
+        "- Qua quá trình làm đồ án, em cũng tích luỹ những kiến thức bổ ích cho bản thân như: về triển khai mô hình học máy trong thực tế cho dữ liệu time-series, áp dụng mô hình LightGBM cho một bài toán thực tế.\n",
         "\n",
         "### 4. Phạm Đình Thục\n",
         "- Trong đồ án này, với việc lựa chọn được đề tài, solution phù hợp với mình, em đã có một số thuận lợi trong việc làm đồ án này như: solution có code sẵn, được tác giả trình bày rõ ràng giúp cho việc đọc hiểu đề tài dễ dàng hơn.\n",
@@ -5426,7 +5438,7 @@
       "collapsed_sections": [],
       "name": "Group12_kaggle_recruit_restaurant.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
