update all sections

--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -182,9 +182,9 @@
       },
       "source": [
         "- **Input:** Trong file `air_visit_data.csv` liên quan về dữ liệu khách hàng theo ngày của từng nhà hàng. Trong file biểu diễn dữ liệu theo ngày (những ngày không có khách sẽ không được thu thập).\n",
+        "- **Phương pháp:** Những ngày không có khách thì ta sẽ gán giá trị cho lượt truy cập sẽ là 0. Gán cờ `was_nil` cho những ngày đó.\n",
         "- **Output**: Dữ liệu khách của từng nhà hàng được sắp xếp liên tục theo từng ngày (kể cả những ngày không được thu thập).\n",
-        "- **Mục đích**: Có ích cho việc tính toán luân phiên dựa vào thời gian.\n",
-        "- **Phương pháp:** Những ngày không có khách thì ta sẽ gán giá trị cho lượt truy cập sẽ là 0. Gán cờ `was_nil` cho những ngày đó."
+        "- **Mục đích**: Có ích cho việc tính toán luân phiên dựa vào thời gian.\n"
       ]
     },
     {
@@ -558,9 +558,9 @@
       },
       "source": [
         "- **Input:** Trong file `date_info.csv` liên quan đến dữ liệu các ngày lễ, bao gồm: Thứ, ngày, tháng, năm và cờ `holiday_flg`.\n",
+        "- **Phương pháp:** Ta thêm hai biến flag cho biết ngày hôm trước (`prev_day_is_holiday`) và ngày hôm sau (`next_day_is_holiday`) của ngày đang xét có phải là ngày lễ hay không?\n",
         "- **Output**: Dữ liệu ngày lễ sẽ chứa thêm các đặc trưng: `next_day_is_holiday`,`prev_day_is_holiday`\n",
-        "- **Mục đích:** Điều này giúp ta biết được ngày đang xét là ngày lễ đơn hay nằm trong kỳ nghỉ lễ dài ngày.\n",
-        "- **Phương pháp:** Ta thêm hai biến flag cho biết ngày hôm trước (`prev_day_is_holiday`) và ngày hôm sau (`next_day_is_holiday`) của ngày đang xét có phải là ngày lễ hay không?"
+        "- **Mục đích:** Điều này giúp ta biết được ngày đang xét là ngày lễ đơn hay nằm trong kỳ nghỉ lễ dài ngày.\n"
       ]
     },
     {
@@ -937,9 +937,10 @@
       },
       "source": [
         "- **Input:** Trong file `air_store_info.csv` liên quan đến dữ liệu thông tin về nhà hàng. Tuy nhiên trong dữ liệu đến từ cuộc thi còn thiếu nhiều đặc trưng.\n",
+        "- **Phương pháp:** Sử dụng phiên bản xử lý trước thay vì phiên bản hiện tại của cuộc thi (vì nó chứa dữ liệu quan trọng của các trạm quan sát thời tiết). Ta có thể truy cập dữ liệu này ở [đây](https://www.kaggle.com/huntermcgushion/rrv-weather-data). \n",
         "- **Output:** Dữ liệu sẽ chứa thêm các đặc trưng như: `station_id` (id của các trạm gần nhà hàng nhất), `station_latitude` (vĩ độ của trạm), `station_longitude` (kinh độ của trạm),…\n",
         "- **Mục đích:** Tăng thêm các thuộc tính nhằm tăng độ chính xác cho quá trình huấn luyện.\n",
-        "- **Phương pháp:** Sử dụng phiên bản xử lý trước thay vì phiên bản hiện tại của cuộc thi (vì nó chứa dữ liệu quan trọng của các trạm quan sát thời tiết). Ta có thể truy cập dữ liệu này ở [đây](https://www.kaggle.com/huntermcgushion/rrv-weather-data). \n",
+        "\n",
         "\n"
       ]
     },
@@ -1374,9 +1375,10 @@
       },
       "source": [
         "- **Input:** Trong file `sample_submission.csv` chứa thông tin tập **test**. Vì id trong sample là chuỗi gồm id + visit_date.\n",
+        "- **Phương pháp:** Ta cần tách ra `id` riêng và `visit_date` riêng. Tạo thêm 2 cột `is_test` và `test_number`.\n",
         "- **Output:** Dữ liệu sẽ sample sẽ tách các đặc trưng `id` và `visit_date` và thêm các đặc trưng mới: `is_test` và `test_number`.\n",
         "- **Mục đích:** Việc tạo cột `test_number` nhằm để các kết quả dự đoán (submission) được sắp xếp theo đúng thứ tự và `is_test` để tránh nhầm lẫn dữ liệu train.\n",
-        "- **Phương pháp:** Ta cần tách ra `id` riêng và `visit_date` riêng. Tạo thêm 2 cột `is_test` và `test_number`.\n",
+        "\n",
         "\n"
       ]
     },
@@ -1783,7 +1785,7 @@
       },
       "source": [
         "---\n",
-        "### 2.1.5 Merge dataset\n"
+        "### 2.2.1 Merge dataset\n"
       ]
     },
     {
@@ -1793,9 +1795,10 @@
       },
       "source": [
         "- **Input:** 2 bộ dữ liệu train và sample_submission\n",
+        "- **Phương pháp:** Merge 2 tập lại với nhau.\n",
         "- **Output:** Tập dữ liệu data gồm thông tin từ 2 tập đầuu vào.\n",
         "- **Mục đích:** Hợp nhất tập hợp train và test là một ý tưởng hay để trích xuất các tính năng trong một lần.\n",
-        "- **Phương pháp:** Merge 2 tập lại với nhau.\n"
+        "\n"
       ]
     },
     {
@@ -2089,7 +2092,7 @@
       },
       "source": [
         "--- \n",
-        "### 2.1.6 Dữ liệu thời tiết"
+        "### 2.2.2 Dữ liệu thời tiết"
       ]
     },
     {
@@ -2099,13 +2102,14 @@
       },
       "source": [
         "- **Input:** `1663` file Dữ liệu về thời tiết mỗi file ứng với 1 trạm thời tiết.\n",
+        "- **Phương pháp:**\n",
+        "  - Nhập dữ liệu thời tiết ứng với mỗi file vào bảng `weather`. \n",
         "- **Output:** Dữ liệu trong `weather` chứa thông tin thời tiết của các trạm thời tiết.\n",
         "- **Mục đích:** Trong bảng này có nhiều dữ liệu không tồn tại `NaN` với nhiều lý do:    \n",
         "  * 01 khu vực quanh năm nắng nóng sẽ không cần tới loại dữ liệu snowfall và tương tự.\n",
         "  * 01 số trạm thời tiết nhỏ chỉ có 1 nhiệm vụ là đo lượng mưa và có những trạm lớn sẽ đo nhiều thông số thời tiết.\n",
         "  * 01 số trạm ở khu vực vùng núi sẽ không thể đo đạc các chỉ số liên qua đến biển.\n",
-        "- **Phương pháp:**\n",
-        "  - Nhập dữ liệu thời tiết ứng với mỗi file vào bảng `weather`. \n",
+        "\n",
         "\n",
         "\n",
         "\n"
@@ -2389,7 +2393,7 @@
       },
       "source": [
         "---\n",
-        "### 2.1.7 Trích chọn dữ liệu thời tiết"
+        "### 2.2.3 Trích chọn dữ liệu thời tiết"
       ]
     },
     {
@@ -2404,12 +2408,12 @@
         "  - Đối với nhà hàng, thời gian mở cửa thường không thay đổi nên các chỉ số về mặt trời mọc hay lặn sẽ không ảnh hưởng đến các quyết định của nhà hàng.\n",
         "  - Một số yếu tố khó có thể biết được trong tương lai thì sẽ không được chọn. Thay vào đó các yếu tố dễ dàng thu thập được sẽ ưu tiên chọn.\n",
         "  - Các dữ liệu còn lại missing nhiều, nên không thể dùng được.\n",
-        "- **Output:** Dữ liệu thời tiết chỉ còn 3 đặc trưng: `visit_date`,  `avg_temperature`,\t`precipitation`.\n",
-        "- **Mục đích:** Trích chọn nhằm chọn ra những giá trị thực sự cần thiết cho mô hình và làm giảm tải lượng lớn dữ liệu không cần thiết để tăng tốc cho mô hình huấn luyện.\n",
         "- **Phương pháp:** Sau khi đã cân nhắc và xem xét, ta quyết định chọn ra các giá trị quan trọng đến số lượng khách:\n",
         "  - Lượng mưa trung bình trong 1 ngày.\n",
         "  - Nhiệt độ trung bình trong 1 ngày.\n",
-        "  - (lượt bỏ các giá trị khác).\n"
+        "  - (lượt bỏ các giá trị khác).\n",
+        "- **Output:** Dữ liệu thời tiết chỉ còn 3 đặc trưng: `visit_date`,  `avg_temperature`,\t`precipitation`.\n",
+        "- **Mục đích:** Trích chọn nhằm chọn ra những giá trị thực sự cần thiết cho mô hình và làm giảm tải lượng lớn dữ liệu không cần thiết để tăng tốc cho mô hình huấn luyện.\n"
       ]
     },
     {
@@ -2594,7 +2598,7 @@
       },
       "source": [
         "---\n",
-        "### 2.1.8 Kết quả thu được"
+        "### 2.2.4 Kết quả thu được"
       ]
     },
     {
@@ -2921,7 +2925,7 @@
         "id": "D8zK0ndrBmBG"
       },
       "source": [
-        "## 2.2 TIỀN XỬ LÝ DỮ LIỆU\n"
+        "## 2.3 TIỀN XỬ LÝ DỮ LIỆU\n"
       ]
     },
     {
@@ -2930,7 +2934,7 @@
         "id": "Za8QeVFZqoet"
       },
       "source": [
-        "### 2.2.1 Xử lý outliers"
+        "### 2.3.1 Xử lý outliers"
       ]
     },
     {
@@ -3336,7 +3340,7 @@
         "id": "V_LkwJHb7FaX"
       },
       "source": [
-        "### 2.2.2 Trích xuất thêm các đặc trưng."
+        "### 2.3.2 Trích xuất thêm các đặc trưng."
       ]
     },
     {
@@ -3388,7 +3392,7 @@
         "id": "Px09LfO_8MuS"
       },
       "source": [
-        "### 2.2.3 Tính trọng số theo cấp số nhân cho số lượng khách hàng."
+        "### 2.3.3 Tính trọng số theo cấp số nhân cho số lượng khách hàng."
       ]
     },
     {
@@ -3826,7 +3830,7 @@
         "id": "OB1DbSU6CQYx"
       },
       "source": [
-        "### 2.2.4 Tính toán các đặc trưng."
+        "### 2.3.4 Tính toán các đặc trưng."
       ]
     },
     {
@@ -4584,10 +4588,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "U1J_OaapCOHf"
+      },
+      "source": [
+        "## 2.4 XÂY DỰNG MÔ HÌNH\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- **Input:** data được gộp lại từ những file weather và dữ liệu khách hàng.\n",
+        "- **Output**: số liệu RMSLE với dữ liệu cục bộ và kết quả đầu ra của file sub cho trang kaggle.\n",
+        "- **Mục đích**: Thu thập kết quả cho file sub mà bài toán đưa ra.\n",
+        "- **Phương pháp:** Sử dụng Mô hình LightGBM và KFold."
+      ],
+      "metadata": {
+        "id": "C2KKlO2H0Gla"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "B7PEsInETaHu"
       },
       "source": [
-        "### 2.2.5 Mã hoá dữ liệu"
+        "### 2.4.1 Mã hoá dữ liệu"
       ]
     },
     {
@@ -5252,31 +5277,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "U1J_OaapCOHf"
-      },
-      "source": [
-        "## 2.3. XÂY DỰNG MÔ HÌNH\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- **Input:** data được gộp lại từ những file weather và dữ liệu khách hàng.\n",
-        "- **Output**: số liệu RMSLE với dữ liệu cục bộ và kết quả đầu ra của file sub cho trang kaggle.\n",
-        "- **Mục đích**: Thu thập kết quả cho file sub mà bài toán đưa ra.\n",
-        "- **Phương pháp:** Sử dụng Mô hình LightGBM và KFold."
-      ],
-      "metadata": {
-        "id": "C2KKlO2H0Gla"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "qMr8rh1uIcIv"
       },
       "source": [
-        "### 2.3.1 Chuẩn bị dữ liệu train và test"
+        "### 2.4.2 Chuẩn bị dữ liệu train và test"
       ]
     },
     {
@@ -5319,7 +5323,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2.3.2 Huấn luyện mô hình LightGBM"
+        "### 2.4.3 Huấn luyện mô hình LightGBM"
       ],
       "metadata": {
         "id": "avBeyMwIhArx"
@@ -5418,7 +5422,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2.3.3 Kết quả"
+        "### 2.4.4 Kết quả"
       ],
       "metadata": {
         "id": "3dcDEAhohOkR"
