--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -3838,7 +3838,7 @@
       "source": [
         "\n",
         "\n",
-        "*   **Input:** Tập dữ liệu được xử lý ở bước trên.\n",
+        "*   **Input:** Tập dữ liệu được xử lý ở bước 2.3.3.\n",
         "*   **Output:** Tập dữ liệu được thêm một số đặc trưng như mean, median,...\n",
         "*   **Mục đích:** Tạo thêm một số đặc trưng mới giúp ích cho quá trình huấn luyện.\n",
         "*   **Phương pháp:** Ta gom nhóm dữ liệu, chọn các giá trị alpha cố định để tính EWM sau đó tính toán và tạo thêm các đặc trưng mới cho dữ liệu train.\n",
@@ -4620,9 +4620,9 @@
       "source": [
         "\n",
         "\n",
-        "*   **Input:** Dữ liệu được xử lý ở bước trên.\n",
+        "*   **Input:** Dữ liệu được xử lý ở bước 2.3.\n",
         "*   **Output:** Dữ liệu được thêm các đặc trưng về các ngày trong tuần và loại nhà hàng.\n",
-        "*   **Mục đích:** Làm tăng số lượng đặc trưng nhằm giúp ích cho quá trình huấn luyện.\n",
+        "*   **Mục đích:** Chuyễn các dữ liệu dạng chuỗi, danh mục trong cột thành dữ liệu dạng số và model có thể học được.\n",
         "*   **Phương pháp:** Dùng hàm get_dummies để tạo các cột dữ liệu mới từ dữ liệu day_of_week và air_genre_name.\n",
         "\n",
         "\n",
