--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -3360,7 +3360,7 @@
         "\n",
         "*   **Input:** Dữ liệu train.\n",
         "*   **Output:** Dữ liệu được thêm các đặc trưng mới.\n",
-        "*   **Mục đích:** Tạo thêm một số đặc trưng giúp ích cho quá trình huấn luyện.\n",
+        "*   **Mục đích:** Tạo thêm một số đặc trưng giúp phát hiện tính chu kỳ của dữ liệu thời gian.\n",
         "\n",
         "\n",
         "\n"
@@ -3850,7 +3850,7 @@
         "\n",
         "*   **Input:** Tập dữ liệu được xử lý ở bước 2.3.3.\n",
         "*   **Output:** Tập dữ liệu được thêm một số đặc trưng như mean, median,...\n",
-        "*   **Mục đích:** Tạo thêm một số đặc trưng mới giúp ích cho quá trình huấn luyện.\n",
+        "*   **Mục đích:** Trích xuất thêm một số đặc trưng mới giúp ích cho quá trình huấn luyện.\n",
         "*   **Phương pháp:** Ta gom nhóm dữ liệu, chọn các giá trị alpha cố định để tính EWM sau đó tính toán và tạo thêm các đặc trưng mới cho dữ liệu train.\n",
         "\n",
         "\n",
@@ -4633,7 +4633,7 @@
         "*   **Input:** Dữ liệu được xử lý ở bước 2.3.\n",
         "*   **Output:** Dữ liệu được thêm các đặc trưng về các ngày trong tuần và loại nhà hàng.\n",
         "*   **Mục đích:** Chuyễn các dữ liệu dạng chuỗi, danh mục trong cột thành dữ liệu dạng số và model có thể học được.\n",
-        "*   **Phương pháp:** Dùng hàm get_dummies để tạo các cột dữ liệu mới từ dữ liệu day_of_week và air_genre_name.\n",
+        "*   **Phương pháp:** Dùng hàm get_dummies để mã hoá **one-hot encoding** tạo các cột dữ liệu mới từ dữ liệu day_of_week và air_genre_name.\n",
         "\n",
         "\n",
         "\n"
