update sơ lược dữ liệu

--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -99,6 +99,10 @@
         "- AIR: 829 restaurants \n",
         "- HPG: 4690 restaurants\n",
         "\n",
+        "Ngoài việc dùng dữ liệu từ hai trang web trên, tác giả còn sử dụng thêm dữ liệu về thời tiết tại các trạm ở Nhật Bản được thu thập bởi Hunter McGushion giúp ích cho cuộc thi của Recruit Restaurant Visitor Forecasting. \n",
+        "\n",
+        "Tập dữ liệu: [Weather Data for Recruit Restaurant Competition](https://www.kaggle.com/huntermcgushion/rrv-weather-data) được thu thập từ ngày 1-1-2016 đến 31-5-2017 chứa thông tin về 1663 trạm thời tiết ở Nhật Bản\n",
+        "\n",
         "Dữ liệu thu thập bao gồm các thông tin liên quan đến nhà hàng (id, latitude, longitude, ...), các thông tin về số lượng khách đặt chỗ tại các nhà hàng và các thông tin liên quan đến thời tiết, ngày lễ."
       ]
     },
@@ -5592,8 +5596,7 @@
     "colab": {
       "collapsed_sections": [],
       "name": "Copy of Copy of Group12_kaggle_recruit_restaurant.ipynb",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
