--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -3003,7 +3003,7 @@
         "\n",
         "Những dòng có giá trị outlier sẽ được thay thế bằng max của những giá trị trong khoảng tin cậy.\n",
         "\n",
-        "Tiếp theo ta tính **log1p** để transform lại dữ liệu, giúp dữ liệu phân bố tốt hơn, không bị lệch phải do các giá trị outlier chưa được lượt bỏ hết."
+        "Tiếp theo ta tính **log1p** để transform lại dữ liệu, giúp dữ liệu phân bố tốt hơn, không bị lệch phải do các giá trị outlier chưa được lượt bỏ hết. Bạn có thể tham khảo tại [đây](https://gdcoder.com/when-why-to-use-log-transformation-in-regression/) để biết thêm về **log-transform**"
       ]
     },
     {
@@ -5605,6 +5605,7 @@
         "7.  https://lightgbm.readthedocs.io/en/latest/\n",
         "8. https://miai.vn/2021/01/18/k-fold-cross-validation-tuyet-chieu-train-khi-it-du-lieu/\n",
         "9. https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.KFold.html\n",
+        "10. https://gdcoder.com/when-why-to-use-log-transformation-in-regression/\n",
         "\n",
         "Và nhóm xin gửi lời cảm ơn đặc biệt đến https://stackoverflow.com/ vì đã hỗ trợ nhóm trong quá trình làm đồ án này. :\">"
       ]
