--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -5344,6 +5344,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "LightGBM preview:\n",
+        "\n",
+        " *\n",
+        "\n",
+        " *\n",
+        " \n",
+        " *\n"
+      ],
+      "metadata": {
+        "id": "pC22UsaFL-Od"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -5615,7 +5630,8 @@
     "colab": {
       "collapsed_sections": [],
       "name": "Copy of Copy of Group12_kaggle_recruit_restaurant.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
