--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -5346,13 +5346,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "LightGBM preview:\n",
+        "Sơ lược về mô hình LightGBM:\n",
         "\n",
-        " *\n",
+        " * Là một thuật toán cây với mục đích tăng cường độ dốc sử dụng thuật toán học tập, LightGBM có ưu điểm như tốc độ cao, xử lý được kích thước dữ liệu lớn và sử dụng ít bộ nhớ hơn để chạy. \n",
         "\n",
-        " *\n",
+        " * LightGBM phát triển cây theo chiều dọc thay vì chiều ngang như các thuật toán thường thấy, điều đó yêu cầu lựa chọn thông minh khi rẽ nhánh lá thay vì bao trùm dữ liệu như các loại khác. điều đó cải thiện tốc độ cũng như quá trình training.\n",
         " \n",
-        " *\n"
+        " * Việc dữ liệu nhỏ dẫn đến đối với bài toán này không hoàn toàn phù hợp với model LightGBM. để cải thiện vấn đề đó, mô hình K Fold được đưa ra để đánh giá mô hình đầy đủ và chính xác hơn.\n"
       ],
       "metadata": {
         "id": "pC22UsaFL-Od"
