--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -5472,7 +5472,7 @@
       },
       "outputs": [],
       "source": [
-        "sub.to_csv('sub.csv'.format(val_mean, val_std), index=False)"
+        "sub.to_csv('submissionslgbm_{:.5f}_{:.5f}.csv'.format(val_mean, val_std), index=False)"
       ]
     },
     {
