--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -5478,19 +5478,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Local score của nhóm: 0.54548 (±0.00174)\n",
+        "Public score của nhóm: 0.61541\n",
         "\n",
-        "Local score của tác giả: 0.48384 (±0.00210)\n",
-        "\n",
-        "\n",
-        "Kaggle score của nhóm: 0.61541\n",
+        "Public score của tác giả: 0.47138\n",
         "\n",
         "\n",
-        "Kaggle score của tác giả: 0.50775\n",
+        "Private score của nhóm: 0.65634\n",
         "\n",
-        "qua quá trình mô phỏng lại ý tưởng của tác giả. nhóm chúng em tăng 0.06993 (±0.00174) tỉ lệ sai khi đưa lên kaggle.\n",
         "\n",
-        "tác giả tăng 0.02391 (±0.00210) khi đưa lên kaggle."
+        "Private score của tác giả: 0.50775\n",
+        "\n",
+        "qua quá trình mô phỏng lại ý tưởng của tác giả. nhóm chúng em tăng 0.04093 tỉ lệ sai khi đưa lên kaggle.\n",
+        "\n",
+        "tác giả tăng 0.03637 khi đưa lên kaggle."
       ],
       "metadata": {
         "id": "CtaCAm80_LUM"
