--- a/Group12_kaggle_recruit_restaurant.ipynb
+++ b/Group12_kaggle_recruit_restaurant.ipynb
@@ -118,20 +118,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RS_HDZ2p9FT-",
-        "outputId": "7a293eb8-38fb-4591-c150-440b1c546e1e"
+        "outputId": "7c301e56-b5c4-4bc2-befb-76245ce44df3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "data  Report.ipynb  submissionslgbm_0.54548_0.00174.csv\n"
           ]
         }
@@ -5486,17 +5486,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "id": "N26RdizCbiej",
-        "outputId": "846836fb-abd5-4cf8-99aa-b23a9fa05f13"
+        "id": "iwbi51TefJoy",
+        "outputId": "558b2f2a-84c7-4a72-800f-bf46ebaa627b"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-4b78998a-d54f-4600-8a4e-b9e3e6008e2b\">\n",
+              "  <div id=\"df-48cb9de1-53ac-4310-89d1-97c946f6aa47\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5549,7 +5549,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4b78998a-d54f-4600-8a4e-b9e3e6008e2b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-48cb9de1-53ac-4310-89d1-97c946f6aa47')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5600,12 +5600,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4b78998a-d54f-4600-8a4e-b9e3e6008e2b button.colab-df-convert');\n",
+              "          document.querySelector('#df-48cb9de1-53ac-4310-89d1-97c946f6aa47 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4b78998a-d54f-4600-8a4e-b9e3e6008e2b');\n",
+              "          const element = document.querySelector('#df-48cb9de1-53ac-4310-89d1-97c946f6aa47');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5636,7 +5636,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
     },
