--- a/Report.ipynb
+++ b/Report.ipynb
@@ -177,7 +177,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Về cơ bản, nhóm tìm hiểu và code lại dựa trên mô tả và code mà tác giả cung cấp. Với một số bước mà tác giả không giải thích rõ ràng (nhóm  sẽ nói rõ khi đi vào các bước ở bên dưới), nhóm cũng phân tích và thí nghiệm thêm để thấy rõ hơn là tại sao lại cần có bước này. Trong quá trình code lại thì nhóm cũng có điều chỉnh một số chỗ để code ngắn gọn và rõ ràng hơn (chỗ nào code lại hoàn toàn theo tác giả và chỗ nào code lại có điều chỉnh thì nhóm đều có comment rõ ràng trong phần code ở bên dưới)."
+        "Về cơ bản, nhóm tìm hiểu và code lại dựa trên mô tả và code mà tác giả cung cấp. Với một số bước mà tác giả không giải thích rõ ràng (nhóm  sẽ nói rõ khi đi vào các bước ở bên dưới), nhóm cũng phân tích và thí nghiệm thêm để thấy rõ hơn là tại sao lại cần có bước này. "
       ],
       "metadata": {
         "id": "QWeTWaYbsiLC"
@@ -2145,6 +2145,7 @@
         "id": "fntG2cnCg73v"
       },
       "source": [
+        "Ở bước này, tác giả không nói rõ việc tại sao lại có các giá trị thiếu. Nhóm đã đọc và trình bày lại theo cách hiểu của nhóm để giải thích tại sao lại có các giá trị đó.\n",
         "- **Input:** `1663` file Dữ liệu về thời tiết mỗi file ứng với 1 trạm thời tiết.\n",
         "- **Phương pháp:**\n",
         "  - Nhập dữ liệu thời tiết ứng với mỗi file vào bảng `weather`. \n",
@@ -2986,7 +2987,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ở bước này, nhóm đã tìm hiểu và code lại dựa trên mô tả và code mà tác giả cung cấp. Ngoài ra, nhóm còn tìm hiểu thêm để giải thích cho việc lựa chọn của tác giả.\n",
+        "Ở bước này, nhóm đã tìm hiểu và code lại dựa trên mô tả và code mà tác giả cung cấp. Ngoài ra, nhóm còn tìm hiểu thêm để giải thích cho việc lựa chọn các thông số để xử lý Outlier của tác giả.\n",
         "\n",
         "*   **Input:** Tập dữ liệu train\n",
         "*   **Output:** Dữ liệu đã được lượt bỏ giá trị outliers và tạo thêm đặc trưng `log1p` của giá trị được loại bỏ outliers.\n",
@@ -3405,7 +3406,7 @@
         " - Ngày cuối tuần(`is_weekend`)\n",
         " - Ngày trong tháng(`day_of_month`)\n",
         "\n",
-        "Những đặt trưng này có thể được coi là đại diện cho thời điểm\n",
+        "Những đặc trưng này có thể được coi là đại diện cho thời điểm\n",
         "- Thường hay ăn chơi dịp cuối tuần.\n",
         "- Mọi người được trả tiền trong tháng, giả sử họ được trả tiền hàng tháng.\n"
       ]
@@ -4615,18 +4616,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "- **Input:** Data từ dữ liệu thời tiết và dữ liệu nhà hàng đã được xử lý.\n",
-        "- **Output**: Độ đo RMSLE với dữ liệu cục bộ và kết quả đầu ra của file submission cho trang kaggle.\n",
-        "- **Mục đích**: Thu thập kết quả cho file submission mà bài toán đưa ra.\n",
-        "- **Phương pháp:** Sử dụng Mô hình LightGBM và KFold."
-      ],
-      "metadata": {
-        "id": "C2KKlO2H0Gla"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "B7PEsInETaHu"
       },
@@ -5350,6 +5339,18 @@
       ],
       "metadata": {
         "id": "avBeyMwIhArx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- **Input:** Data từ dữ liệu thời tiết và dữ liệu nhà hàng đã được xử lý.\n",
+        "- **Output**: Độ đo RMSLE với dữ liệu cục bộ và kết quả đầu ra của file submission cho trang kaggle.\n",
+        "- **Mục đích**: Thu thập kết quả cho file submission mà bài toán đưa ra.\n",
+        "- **Phương pháp:** Sử dụng Mô hình LightGBM và KFold."
+      ],
+      "metadata": {
+        "id": "C2KKlO2H0Gla"
       }
     },
     {
